Bug 544447 - [provider] Implement filetransfer provider using HttpClient 4.5 API
Set the ConnectionRequestTimeout value in the httpclient to be the
same as the ConnectTimeout value.

This value was being set in the ECFHttpClientFactory class using
the provider specific properties, but not in the
HttpClientRetrieveFileTransfer class where it applies the values
from the generic properties.

Change-Id: Ife00ae81f08b3a96d13855d2844ef72d19b84fbe
Signed-off-by: Mat Booth <mat.booth@redhat.com>